Reworked CSS to avoid rules override
Some CSS rules were overlapping and were giving undefined styling. This
should fix #3 and make code reading a much more pleasant experience

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -3,7 +3,6 @@ $fonts: Helvetica, sans-serif;
 
 html, body {
   height: 100%;
-  font-size: 13px;
 }
 
 * {
@@ -11,7 +10,6 @@ html, body {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   color: #6d645c;
-  font-family: $fonts;
 }
 
 body {
@@ -19,8 +17,9 @@ body {
   padding: 0;
   background-image: image-url("background.png");
   background-repeat: repeat;
-  font-family: Helvetica, Arial;
+  font-family: $fonts;
   font-weight: 200;
+  font-size: 13px;
 }
 
 #adminNavigationOptions {
